--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,8 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="number"
-        android:hint="0"
+        android:textAlignment="viewEnd"
+        android:hint="120000"
         app:layout_constraintBottom_toTopOf="@+id/editText02_estalvis"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -97,7 +98,8 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="number"
-        android:hint="0"
+        android:textAlignment="viewEnd"
+        android:hint="30"
         app:layout_constraintBottom_toTopOf="@+id/editText04_euribor"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -109,7 +111,8 @@
         android:layout_marginBottom="120dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="0.0"
+        android:textAlignment="viewEnd"
+        android:hint="2.5"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -121,7 +124,8 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:hint="0.0"
+        android:textAlignment="viewEnd"
+        android:hint="0.163"
         app:layout_constraintBottom_toTopOf="@+id/editText05_diferencial"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -133,7 +137,8 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="number"
-        android:hint="0"
+        android:textAlignment="viewEnd"
+        android:hint="2000"
         app:layout_constraintBottom_toTopOf="@+id/editText03_plac"
         app:layout_constraintEnd_toEndOf="parent" />
 
