--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:ems="10"
         android:inputType="number"
         android:textAlignment="viewEnd"
-        android:hint="120000"
+        android:text="120000"
         app:layout_constraintBottom_toTopOf="@+id/editText02_estalvis"
         app:layout_constraintEnd_toEndOf="parent" />
 
