--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
         android:ems="10"
         android:inputType="number"
         android:textAlignment="viewEnd"
-        android:hint="30"
+        android:text="30"
         app:layout_constraintBottom_toTopOf="@+id/editText04_euribor"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -112,7 +112,7 @@
         android:ems="10"
         android:inputType="numberDecimal"
         android:textAlignment="viewEnd"
-        android:hint="2.5"
+        android:text="2.5"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -125,7 +125,7 @@
         android:ems="10"
         android:inputType="numberDecimal"
         android:textAlignment="viewEnd"
-        android:hint="0.163"
+        android:text="0.163"
         app:layout_constraintBottom_toTopOf="@+id/editText05_diferencial"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -138,7 +138,7 @@
         android:ems="10"
         android:inputType="number"
         android:textAlignment="viewEnd"
-        android:hint="2000"
+        android:text="2000"
         app:layout_constraintBottom_toTopOf="@+id/editText03_plac"
         app:layout_constraintEnd_toEndOf="parent" />
 
