--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/titleApp"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            />
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <TextView
+        android:id="@+id/str01_precio_inmueble"
+        android:layout_width="120dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="40dp"
+        android:text="@string/str01"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/str02_estalvis"
+        app:layout_constraintEnd_toStartOf="@+id/editText01_precio_inmueble"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/str02_estalvis"
         android:layout_width="120dp"
         android:layout_height="22dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:text="@string/str02"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/str03_plac"
         app:layout_constraintEnd_toStartOf="@+id/editText02_estalvis"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/str03_plac"
-        android:layout_width="120dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/str03"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/str04_euribor"
-        app:layout_constraintEnd_toStartOf="@+id/editText03_plac"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -40,7 +54,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="108dp"
         android:text="@string/str05"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -48,17 +62,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <!--    ************************ -->
+
     <TextView
-        android:id="@+id/str01_precio_inmueble"
+        android:id="@+id/str03_plac"
         android:layout_width="120dp"
         android:layout_height="22dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/str01"
+        android:layout_marginBottom="40dp"
+        android:text="@string/str03"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/str02_estalvis"
-        app:layout_constraintEnd_toStartOf="@+id/editText01_precio_inmueble"
+        app:layout_constraintBottom_toTopOf="@+id/str04_euribor"
+        app:layout_constraintEnd_toStartOf="@+id/editText03_plac"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -68,7 +84,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:text="@string/str04"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/str05_diferencial"
@@ -81,39 +97,26 @@
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="number"
-        android:textAlignment="viewEnd"
         android:text="120000"
+        android:textAlignment="viewEnd"
         app:layout_constraintBottom_toTopOf="@+id/editText02_estalvis"
         app:layout_constraintEnd_toEndOf="parent" />
 
-<!--    ************************ -->
+
     <EditText
-        android:id="@+id/editText03_plac"
+        android:id="@+id/editText02_estalvis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="number"
+        android:text="2000"
         android:textAlignment="viewEnd"
-        android:text="30"
-        app:layout_constraintBottom_toTopOf="@+id/editText04_euribor"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <EditText
-        android:id="@+id/editText05_diferencial"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="120dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:textAlignment="viewEnd"
-        android:text="2.5"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/editText03_plac"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
@@ -121,39 +124,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:textAlignment="viewEnd"
         android:text="0.163"
+        android:textAlignment="viewEnd"
         app:layout_constraintBottom_toTopOf="@+id/editText05_diferencial"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/editText02_estalvis"
+        android:id="@+id/editText03_plac"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="number"
+        android:text="30"
         android:textAlignment="viewEnd"
-        android:text="2000"
-        app:layout_constraintBottom_toTopOf="@+id/editText03_plac"
+        app:layout_constraintBottom_toTopOf="@+id/editText04_euribor"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <EditText
+        android:id="@+id/editText05_diferencial"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="108dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:text="2.5"
+        android:textAlignment="viewEnd"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button01_calcular"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/button01"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText05_diferencial"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -174,6 +190,22 @@
         android:layout_height="wrap_content"
         app:barrierDirection="top" />
 
+    <Switch
+        android:id="@+id/switch01"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="380dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button01_calcular"
+        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/str05_diferencial"
+        app:layout_constraintVertical_bias="0.444"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -188,10 +220,10 @@
             android:id="@+id/textView01_mes"
             android:layout_width="205.5dp"
             android:layout_height="60dp"
-            android:text="@string/textview_mes"
-            android:textSize="20dp"
-            android:textColor="@color/white"
             android:gravity="center"
+            android:text="@string/textview_mes"
+            android:textColor="@color/white"
+            android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="@+id/textView02_total"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="398dp" />
@@ -200,14 +232,15 @@
             android:id="@+id/textView02_total"
             android:layout_width="205.5dp"
             android:layout_height="60dp"
-            android:text="@string/textview_total"
-            android:textSize="20dp"
-            android:textColor="@color/white"
             android:gravity="center"
+            android:text="@string/textview_total"
+            android:textColor="@color/white"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView01_mes"
             tools:layout_editor_absoluteY="398dp" />
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
